--- a/src/app/PAGES/account/account.component.html
+++ b/src/app/PAGES/account/account.component.html
@@ -1,6 +1,39 @@
-<div class="login">
-  <app-login></app-login>
-</div>
-<div>
-  <button>Continue As Guest</button>
+<div class="container">
+  <div class="row">
+    <div>
+      <div class="indiator">
+        <ul class="progressbar">
+          <li class="active">Accounts</li>
+          <li>Shipping</li>
+          <li>Payment</li>
+          <li>Complete</li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-8">
+      <div class="row">
+        <div class="login" class="col-sm-6">
+          <app-login></app-login>
+        </div>
+        <div class="col-sm-1 or">
+          <h4>OR</h4>
+        </div>
+
+        <div class="col-sm-5 guest">
+          <div class="guest_div">
+            <button class="btn_guest">Continue As Guest</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-4 check_items">
+      <div class="subtotal1" *ngIf="checkout.getCartLength() > 0">
+        <p>Number of items: {{ checkout.getCartLength() }}</p>
+        <p>
+          Total Price:<strong>₹{{ checkout.getTotal() }}</strong>
+        </p>
+        <br />
+      </div>
+    </div>
+  </div>
 </div>
