--- a/src/app/PAGES/checkout/checkout.component.html
+++ b/src/app/PAGES/checkout/checkout.component.html
@@ -21,5 +21,10 @@
   </div>
   <div class="checkout_right">
     <app-checkout-subtotal></app-checkout-subtotal>
+    <div>
+      <button routerLink="/account" class="checkout_button">
+        Proceed to checkout
+      </button>
+    </div>
   </div>
 </div>
