--- a/src/app/PAGES/account/account.component.css
+++ b/src/app/PAGES/account/account.component.css
@@ -1,84 +1,41 @@
-.guest {
-  margin-top: 150px;
+.account_page {
+  width: 98%;
 }
-.guest_div {
-  height: 100px;
-  width: 300px;
-  border: 1px solid gray;
-  align-items: center;
-  text-align: center;
-  padding-top: 35px;
-  border-radius: 4px;
-}
-.check_items {
-  margin-top: 50px;
-}
-.subtotal1 {
-  height: 300px;
-  width: 250px;
-  border: 1px solid gray;
-  align-items: center;
-  text-align: center;
-  padding-top: 35px;
-  border-radius: 4px;
-}
-.btn_guest {
-  background-color: rgb(83, 206, 206);
-  border-radius: 4px;
-}
-.or {
-  padding-top: 200px;
-}
-.indiator {
-  width: 100%;
+.row {
   display: flex;
   flex-direction: column;
 }
+.account_signin {
+  border: 1px solid rgb(182, 180, 180);
+  width: 250px;
+  margin: 10px;
+  align-items: center;
+  border-radius: 4px;
+}
+.account_signin > h3 {
+  font-weight: 500;
+  margin-left: 90px;
+  padding-top: 4px;
+}
+.account_form {
+  margin: 5px;
+  margin-left: 15px;
+}
+.account_form > input {
+  width: 90%;
+}
+.account_form > button {
+  background-color: rgb(133, 241, 241);
+  margin: 4px;
+  margin-left: 70px;
+}
+.or {
+  width: 100px;
+}
 
-.progressbar {
-  counter-reset: step;
-}
-.progressbar li {
-  list-style: none;
-  display: inline-block;
-  width: 15%;
-  position: relative;
+.item_page {
+  border: 1px solid grey;
+  align-items: center;
   text-align: center;
-  cursor: pointer;
-  margin-top: 5px;
-}
-.progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 25px;
-  height: 25px;
-  line-height: 30px;
-  border: 1px solid #ddd;
-  border-radius: 100%;
-  display: block;
-  text-align: center;
-  margin: 0 auto 10px auto;
-  background-color: #fff;
-}
-.progressbar li:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  background-color: #ddd;
-  top: 15px;
-  left: -50%;
-  z-index: -1;
-}
-.progressbar li:first-child:after {
-  content: none;
-}
-.progressbar li.active {
-  color: rgb(45, 225, 238);
-}
-.progressbar li.active:before {
-  border-color: rgb(22, 235, 235);
-}
-.progressbar li.active + li:after {
-  background-color: rgb(39, 226, 233);
+  width: 150px;
 }
