--- a/src/app/PAGES/account/account.component.html
+++ b/src/app/PAGES/account/account.component.html
@@ -1,38 +1,29 @@
-<div class="container">
+<div class="container account_page">
   <div class="row">
-    <div>
-      <div class="indiator">
-        <ul class="progressbar">
-          <li class="active">Accounts</li>
-          <li>Shipping</li>
-          <li>Payment</li>
-          <li>Complete</li>
-        </ul>
+    <div class="col-sm-4">
+      <div class="account_signin">
+        <h3>SignIn</h3>
+        <form action="" class="account_form">
+          <h5>Email</h5>
+          <input type="email" />
+          <h5>Password</h5>
+          <input type="text" />
+          <br />
+          <button routerLink="/delivery">Login</button>
+        </form>
       </div>
-    </div>
-    <div class="col-sm-8">
-      <div class="row">
-        <div class="login" class="col-sm-6">
-          <app-login></app-login>
-        </div>
-        <div class="col-sm-1 or">
-          <h4>OR</h4>
-        </div>
 
-        <div class="col-sm-5 guest">
+      <div class="col-sm-4">
+        <div class="guest">
           <div class="guest_div">
             <button class="btn_guest">Continue As Guest</button>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="col-sm-4 check_items">
-      <div class="subtotal1" *ngIf="checkout.getCartLength() > 0">
-        <p>Number of items: {{ checkout.getCartLength() }}</p>
-        <p>
-          Total Price:<strong>₹{{ checkout.getTotal() }}</strong>
-        </p>
-        <br />
+        <div class="col-sm-4">
+          <div class="item_page">
+            <app-item></app-item>
+          </div>
+        </div>
       </div>
     </div>
   </div>
