--- a/src/app/PAGES/checkout/checkout.component.css
+++ b/src/app/PAGES/checkout/checkout.component.css
@@ -31,3 +31,9 @@
   color: rgb(15, 152, 231);
   font-weight: 400;
 }
+.checkout_button {
+  background-color: rgb(108, 243, 243);
+  padding-left: 10px;
+  margin-left: 100px;
+  border-radius: 4px;
+}
