--- a/src/app/PAGES/account/account.component.html
+++ b/src/app/PAGES/account/account.component.html
@@ -1,6 +1,16 @@
-<div class="container account_page">
+<div class="account_page">
+  <div class="indiator">
+    <ul class="progressbar">
+      <li class="active">Accounts</li>
+      <li>Shipping</li>
+      <li>Payment</li>
+      <li>Complete</li>
+    </ul>
+    <h2>Already have a account.?</h2>
+  </div>
+
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-4">
       <div class="account_signin">
         <h3>SignIn</h3>
         <form action="" class="account_form">
@@ -12,19 +22,32 @@
           <button routerLink="/delivery">Login</button>
         </form>
       </div>
-
-      <div class="col-sm-4">
-        <div class="guest">
-          <div class="guest_div">
-            <button class="btn_guest">Continue As Guest</button>
-          </div>
+    </div>
+    <div class="col-1">
+      <div class="or">
+        <h2><strong>OR</strong></h2>
+      </div>
+    </div>
+    <div class="col-3 guest">
+      <div guest>
+        <div class="guest_div">
+          <button class="btn_guest">Continue As Guest</button>
         </div>
-        <div class="col-sm-4">
-          <div class="item_page">
-            <app-item></app-item>
-          </div>
-        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="item_page">
+        <app-item></app-item>
       </div>
     </div>
   </div>
 </div>
+
+<!-- <div class="row">
+  <div class="col-sm-4">
+    <div class="col-sm-4">
+     
+      <div class="col-sm-4"></div>
+    </div>
+  </div>
+</div> -->
