--- a/src/app/PAGES/account/account.component.html
+++ b/src/app/PAGES/account/account.component.html
@@ -31,7 +31,9 @@
     <div class="col-3 guest">
       <div guest>
         <div class="guest_div">
-          <button class="btn_guest">Continue As Guest</button>
+          <button class="btn_guest" routerLink="/delivery">
+            Continue As Guest
+          </button>
         </div>
       </div>
     </div>
