--- a/src/app/PAGES/complete/complete.component.html
+++ b/src/app/PAGES/complete/complete.component.html
@@ -1,1 +1,18 @@
-<p>complete works!</p>
+<div class="confirm_page">
+  <div>
+    <div class="indiator">
+      <ul class="progressbar">
+        <li class="active">Accounts</li>
+        <li class="active">Shipping</li>
+        <li class="active">Payment</li>
+        <li class="active">Complete</li>
+      </ul>
+    </div>
+  </div>
+  <div class="tank_u">
+    <h1>Thank you for your order!</h1>
+  </div>
+  <div class="back_shop">
+    <button routerLink="/">Back To Shopping</button>
+  </div>
+</div>
