--- a/src/app/PAGES/item/item.component.html
+++ b/src/app/PAGES/item/item.component.html
@@ -1,4 +1,9 @@
 <div>
+  <div *ngFor="let item of products">
+    <p>{{ item.title }}</p>
+    <img src="{{ item.image }}" alt="#" />
+  </div>
+
   <p>Cart items:{{ shoppingCart.getCartLength() }}</p>
   <p>
     Cart value:<strong>₹{{ shoppingCart.getTotal() }}</strong>
