--- a/src/app/COMPONENTS/footer/footer.component.html
+++ b/src/app/COMPONENTS/footer/footer.component.html
@@ -17,29 +17,24 @@
       <div class="col-sm-4">
         <h3>We are on</h3>
         <div class="icons">
-          <div style="margin-right: 10%">
-            <i class="bi bi-twitter"></i>
+          <div style="margin: 10%">
+            <i class="bi bi-twitter icon"></i>
           </div>
-          <div style="margin-right: 10%">
-            <i class="bi bi-facebook"></i>
+          <div style="margin: 10%">
+            <i class="bi bi-facebook icon"></i>
           </div>
-          <div style="margin-right: 10%">
-            <i class="bi bi-instagram"></i>
+          <div style="margin: 10%">
+            <i class="bi bi-instagram icon"></i>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div>
-        <h3>Enjoy Our Services With Your Valuable Money</h3>
-        <div style="margin-top: 45px">
-          <h5 style="opacity: 0.7">
-            <i
-              style="padding-right: 6px; opacity: 1"
-              class="fa-solid fa-envelope"
-            ></i
-            >eshop@ecommerce.com
-          </h5>
+        <br />
+        <h3>Enjoy shopping with us....<i class="bi bi-emoji-smile"></i></h3>
+        <div>
+          <p>eshop@ecommerce.com</p>
         </div>
       </div>
     </div>
