--- a/src/app/COMPONENTS/products/products.component.html
+++ b/src/app/COMPONENTS/products/products.component.html
@@ -6,6 +6,7 @@
         <strong> ₹ {{ item.price }}</strong>
       </p>
       <img src="{{ item.image }}" alt="#" />
+      <p>{{ item.desc }}</p>
       <button (click)="addToCart(item)">Add to cart</button>
     </mat-card>
   </div>
