--- a/src/app/PAGES/login/login.component.html
+++ b/src/app/PAGES/login/login.component.html
@@ -8,7 +8,9 @@
         <input type="email" formControlName="email" />
         <h5>Password</h5>
         <input type="password" formControlName="password" />
-        <button class="log_signIn_button" (click)="SignIn()">Sign In</button>
+        <button class="log_signIn_button" (click)="SignIn()" routerLink="/">
+          Sign In
+        </button>
         <p class="login_terms">
           By continuing, you agree to e-Shop's conditions of Use and Privacy
           Notice
