--- a/src/app/PAGES/register/register.component.html
+++ b/src/app/PAGES/register/register.component.html
@@ -3,7 +3,8 @@
     <h1 class="register_logo">E-Shop</h1>
     <div class="register_form">
       <h1>Register</h1>
-      <form action="" [formGroup]="register" (ngSubmit)="(submitData)">
+      <form action="">
+        <!-- //[formGroup]="register" (ngSubmit)="(submitData)" -->
         <h5>Your Name</h5>
         <input type="text" formControlName="Name" />
         <h5>Mobile Number</h5>
