--- a/src/app/PAGES/login/login.component.html
+++ b/src/app/PAGES/login/login.component.html
@@ -1,15 +1,22 @@
+<!-- <div class="login">
+  <div class="login_container">
+    <h1 class="login_logo">E-Shop</h1>
+  </div>
+</div> -->
+
 <div class="login">
   <div class="login_container">
     <h1 class="login_logo">E-Shop</h1>
     <div class="login_form">
       <h1>Sign-in</h1>
-      <form action="" [formGroup]="LoginForm">
+      <form action="">
+        <!-- //[formGroup]="LoginForm" -->
         <h5>Email</h5>
         <input type="email" formControlName="email" />
         <h5>Password</h5>
         <input type="password" formControlName="password" />
-        <button class="log_signIn_button" (click)="SignIn()" routerLink="/">
-          Sign In
+        <button class="log_signIn_button" routerLink="/">
+          <!-- //(click)="SignIn()" Sign In -->
         </button>
         <p class="login_terms">
           By continuing, you agree to e-Shop's conditions of Use and Privacy
