--- a/src/app/PAGES/complete/complete.component.html
+++ b/src/app/PAGES/complete/complete.component.html
@@ -12,6 +12,15 @@
   <div class="tank_u">
     <h1>Thank you for your order!</h1>
   </div>
+
+  <div class="sd">
+    <h3>Shipping Details</h3>
+    <h4>Your Order Number:125453714</h4>
+    <h5>Date : {{ currentDate | date: "yyyy-MM-dd h:mm:ss" }}</h5>
+    <div>
+      <app-item></app-item>
+    </div>
+  </div>
   <div class="back_shop">
     <button routerLink="/">Back To Shopping</button>
   </div>
