--- a/src/app/PAGES/login/login.component.html
+++ b/src/app/PAGES/login/login.component.html
@@ -16,7 +16,8 @@
         <h5>Password</h5>
         <input type="password" formControlName="password" />
         <button class="log_signIn_button" routerLink="/">
-          <!-- //(click)="SignIn()" Sign In -->
+          <!-- //(click)="SignIn()"  -->
+          Sign In
         </button>
         <p class="login_terms">
           By continuing, you agree to e-Shop's conditions of Use and Privacy
