--- a/src/app/PAGES/delivery/delivery.component.html
+++ b/src/app/PAGES/delivery/delivery.component.html
@@ -13,24 +13,70 @@
     <div class="col-8">
       <div class="shipping_form">
         <h2>Shipping Address</h2>
-        <form action="" class="form_div">
-          <input type="text" placeholder="Full Name" />
+        <form action="" class="form_div" [formGroup]="addressForm">
+          <input
+            type="text"
+            placeholder="Full Name"
+            formControlName="username"
+            required
+          />
           <br />
-          <input type="text" placeholder="Mobile Number" />
+          <input
+            type="number"
+            placeholder="Mobile Number"
+            formControlName="mobile"
+            required
+          />
           <br />
-          <input type="text" placeholder="Pincode" />
+          <input
+            type="number"
+            placeholder="Pincode"
+            formControlName="pincode"
+            required
+          />
           <br />
-          <input type="text" placeholder="Flat,House no.,Company,Apartment" />
+          <input
+            type="text"
+            placeholder="Flat,House no.,Company,Apartment"
+            formControlName="flatno"
+            required
+          />
           <br />
-          <input type="text" placeholder="Area,Street,Sector,Village" />
+          <input
+            type="text"
+            placeholder="Area,Street,Sector,Village"
+            formControlName="village"
+            required
+          />
           <br />
-          <input type="text" placeholder="Landmark" />
+          <input
+            type="text"
+            placeholder="Landmark"
+            formControlName="landmark"
+            required
+          />
           <br />
-          <input type="text" placeholder="Town/City" />
+          <input
+            type="text"
+            placeholder="Town/City"
+            formControlName="town"
+            required
+          />
           <br />
-          <input type="text" placeholder="State" />
+          <input
+            type="text"
+            placeholder="State"
+            formControlName="State"
+            required
+          />
           <br />
-          <button routerLink="/payment">Submit</button>
+          <button
+            [disabled]="addressForm.invalid"
+            type="submit"
+            routerLink="/payment"
+          >
+            Submit
+          </button>
         </form>
       </div>
     </div>
