--- a/src/app/PAGES/item/item.component.html
+++ b/src/app/PAGES/item/item.component.html
@@ -4,8 +4,8 @@
     <img src="{{ item.image }}" alt="#" />
   </div>
 
-  <p>Cart items:{{ shoppingCart.getCartLength() }}</p>
+  <p>Cart items: {{ shoppingCart.getCartLength() }}</p>
   <p>
-    Cart value:<strong>₹{{ shoppingCart.getTotal() }}</strong>
+    Cart value:<strong> ₹ {{ shoppingCart.getTotal() }}.00</strong>
   </p>
 </div>
