--- a/src/app/COMPONENTS/header/header.component.html
+++ b/src/app/COMPONENTS/header/header.component.html
@@ -5,7 +5,9 @@
         <i class="bi bi-list"></i>
       </div>
 
-      <h1 class="page_title" style="color: rgb(217, 226, 243)">E-Shop</h1>
+      <h1 class="page_title" style="color: rgb(217, 226, 243)" routerLink="/">
+        E-Shop
+      </h1>
 
       <div class="header_menu_Searchbar">
         <input type="text" class="header_menu_input" />
